--- a/package.json
+++ b/package.json
@@ -27,9 +27,16 @@
     "url": "https://github.com/BrewInteractive/nestjs-notification-module"
   },
   "dependencies": {
+    "@automapper/classes": "^8.8.1",
+    "@automapper/nestjs": "^8.8.1",
+    "@aws-sdk/client-ses": "^3.609.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@sendgrid/mail": "^8.1.3",
+    "js2xmlparser": "^5.0.0",
+    "mockingbird": "^2.1.2",
+    "nodemailer": "^6.9.14",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
@@ -37,26 +44,26 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@release-it/conventional-changelog": "^8.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@release-it/conventional-changelog": "^8.0.1",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
+    "release-it": "^17.3.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4",
-    "release-it": "^17.3.0"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
