--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@automapper/nestjs": "^8.8.1",
     "@automapper/core": "^8.8.1",
     "@aws-sdk/client-ses": "^3.609.0",
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "@sendgrid/mail": "^8.1.3",
+    "dotenv": "^16.0.3",
     "js2xmlparser": "^5.0.0",
     "mockingbird": "^2.1.2",
     "nodemailer": "^6.9.14",
@@ -42,9 +43,9 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.0.0",
-    "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/cli": "^9.0.0",
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@release-it/conventional-changelog": "^8.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
